# tetis

./: Board.cpp  Board.h  CMakeLists.txt  Commun.cpp  Commun.h  Frame.cpp  Frame.h  GamePanel.cpp  GamePanel.h  GamePanelOpponent.cpp  GamePanelOpponent.h  InfoPanel.cpp  InfoPanel.h  Makefile  MyThread.cpp  MyThread.h  Opponents.cpp  Opponents.h  Piece.cpp  Piece.h  README  SelectOpponentsPanel.cpp  SelectOpponentsPanel.h  Server.cpp  Server.h  StartDialog.cpp  StartDialog.h  TetrisGame.cpp  TetrisGame.hpp  added  client_server.cpp  client_server.h  main.cpp  main.h  ml2  ml2.cpp  tetris
